#613 fixd the icon alignment in files grid view on IE

--- a/code/media/koowa/com_files/less/koowa/_files.less
+++ b/code/media/koowa/com_files/less/koowa/_files.less
@@ -1150,6 +1150,9 @@ table th.file-count {
         &:hover {
             text-decoration: none;
         }
+        &:before {
+            display: inline-block;
+        }
     }
     div.imgTotal a.navigate::after {
         .box-shadow(0 0 2px rgba(0, 0, 0, .20) inset);
